--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <link rel="stylesheet" href="assets/styles.css">
   </head>
   <body>
     <div id="app">
@@ -21,10 +21,11 @@
           Highlights
         </button>
       </div>
+      <main>
+        <h2>{{ location }}</h2>
+      </main>
     </div>
-    <main>
-      <h2>{{ location }}</h2>
-    </main>
-    <script type="module" src="/src/main.ts"></script>
+
+    <script src="main.js"></script>
   </body>
 </html>
